src/objects/PB_Document__c.object
<CustomObject>
    <description>Object to hold the list of all the documents and their default attributes</description>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Days__c</fullName>
        <label>Due Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due__c</fullName>
        <label>Due</label>
        <picklist>
            <picklistValues>
                <fullName>72 Hours after Treatment Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 days from Treatment Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 days from Treatment Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 days from Treatment Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 days from Treatment Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 days from last completed (recurring…)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 days from Treatment Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 days PRIOR to Projected End Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 days AFTER Service End Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Effective date of the document</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recurring_Frequency__c</fullName>
        <label>Recurring Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>As Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring_Interval__c</fullName>
        <label>Recurring Interval</label>
        <picklist>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <label>Recurring</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PB_Document</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PB_Documents</pluralLabel>
    <recordTypes>
        <fullName>ABI</fullName>
        <active>true</active>
        <description>This recordtype is used to support ABI network</description>
        <label>ABI</label>
    </recordTypes>
    <recordTypes>
        <fullName>ARY</fullName>
        <active>true</active>
        <description>This recordtype is used to support ARY network</description>
        <label>ARY</label>
    </recordTypes>
    <recordTypes>
        <fullName>ELD</fullName>
        <active>true</active>
        <label>ELD</label>
    </recordTypes>
    <recordTypes>
        <fullName>IDD</fullName>
        <active>true</active>
        <label>IDD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tmn_Provider_Application</fullName>
        <active>true</active>
        <label>Tmn Provider Application</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>REQ_Interval_When_Recurring</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Recurring_Frequency__c , &apos;Recurring&apos;) &amp;&amp; ISPICKVAL( Recurring_Interval__c, &apos;&apos; )</errorConditionFormula>
        <errorDisplayField>Recurring_Interval__c</errorDisplayField>
        <errorMessage>Please specify a recurring interval.</errorMessage>
    </validationRules>
</CustomObject>